--- a/src/Stylsheet/Password-Generator.css
+++ b/src/Stylsheet/Password-Generator.css
@@ -25,6 +25,7 @@
 .checkbox-group {
   display: flex;
   align-items: center;
+
 }
 
 .input-group label{
@@ -41,6 +42,18 @@ input[type='number']{
 }
 .checkbox-group input {
   margin-right: 10px;
+}
+.checkbox-group input[type='checkbox']{
+  appearance: none;
+  -webkit-appearance: none;
+  height: 17px;
+  width: 17px;
+  background-color: #ccc;
+  border-radius: 2px;
+  cursor: pointer;
+}
+input[type='checkbox']:checked{
+  background-color: #007bff;
 }
 
 .generate-btn {
@@ -72,4 +85,8 @@ input[type='text']{
     padding: 5px;
     background-color: green;
     color: white;
+}
+.copy-btn:hover{
+background-color: rgb(47, 227, 167);
+
 }
